# vietnam-stock-analysis

./: .coveragerc  .gitignore  pyproject.toml
notebook/: demo.ipynb
tests/: test_stock_reader.py  test_vietnam_stock_analysis.py
vietnam_stock_analysis/: stock_analyzer.py  stock_reader.py  technical_indicators.py
vietnam_stock_analysis/_dataframe_schema/: __init__.py  stock.py
vietnam_stock_analysis/domain/: symbol.py
