[tool.poetry]
name = "vietnam-stock-analysis"
version = "0.1.0"
description = ""
authors = ["dat9uy <46886826+dat9uy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
investpy = "^1.0"
pandas = "^1.1.1"
pandera = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
